--- a/音乐2.1
+++ b/音乐2.1
@@ -2,6 +2,7 @@ local player = game:GetService("Players").LocalPlayer
 local userInputService = game:GetService("UserInputService")
 local replicatedStorage = game:GetService("ReplicatedStorage")
 local tweenService = game:GetService("TweenService")
+local runService = game:GetService("RunService")
 
 if not player:FindFirstChild("PlayerGui") then player:WaitForChild("PlayerGui") end
 
@@ -28,23 +29,24 @@ local function CreateFullUI()
     mainFrame.BorderSizePixel = 1
     mainFrame.Parent = screenGui
     
-    -- ==================== 关键修复：隐藏拖动圆环 ====================
+    -- ==================== 关键修复1：彻底隐藏拖动圆环 ====================
     mainFrame.Active = true
-    -- 创建完全透明的拖动反馈图像来隐藏默认圆环[7,8](@ref)
-    local transparentDragImage = Instance.new("ImageLabel")
-    transparentDragImage.Image = ""
-    transparentDragImage.Size = UDim2.new(0, 1, 0, 1)
-    transparentDragImage.BackgroundTransparency = 1
-    transparentDragImage.Parent = mainFrame
     
-    -- 使用UIDragDetector并设置透明拖动图像[6](@ref)
+    -- 创建完全不可见的拖动图像
+    local invisibleDragImage = Instance.new("ImageLabel")
+    invisibleDragImage.Image = ""
+    invisibleDragImage.Size = UDim2.new(0, 1, 0, 1)
+    invisibleDragImage.BackgroundTransparency = 1
+    invisibleDragImage.Visible = false
+    invisibleDragImage.Parent = mainFrame
+    
+    -- 使用UIDragDetector
     local dragDetector = Instance.new("UIDragDetector")
     dragDetector.Parent = mainFrame
     
-    -- 在拖动开始时设置透明反馈
     dragDetector.DragStarted:Connect(function()
-        -- 使用setDragImage方法设置完全透明的图像[7](@ref)
-        dragDetector:SetDragImage(transparentDragImage, -999, -999)
+        -- 使用极大负偏移确保拖动图像完全在屏幕外
+        dragDetector:SetDragImage(invisibleDragImage, -9999, -9999)
     end)
     -- ===================================================================
     
@@ -154,19 +156,27 @@ local function CreateFullUI()
 
     local modeButton = CreateToggleButton("智能模式", 0.05, 0.85, 0.4, Color3.fromRGB(180, 180, 255))
 
-    -- ==================== 触摸半透明效果系统 ====================
+    -- ==================== 关键修复2：修复UI变白问题 ====================
     local originalBackgroundColor = mainFrame.BackgroundColor3
     local isBeingTouched = false
     
+    -- 改进的触摸反馈系统
     local function StartTouchFeedback()
         if isBeingTouched then return end
+        
         isBeingTouched = true
         
-        local tweenInfo = TweenInfo.new(0.2, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
+        -- 使用更温和的变暗效果
+        local tweenInfo = TweenInfo.new(
+            0.15, -- 更短的动画时间
+            Enum.EasingStyle.Quad, 
+            Enum.EasingDirection.Out
+        )
+        
         local transparencyTween = tweenService:Create(
             mainFrame,
             tweenInfo,
-            {BackgroundColor3 = Color3.fromRGB(200, 200, 200)}
+            {BackgroundColor3 = Color3.fromRGB(210, 210, 210)} -- 轻微的变暗
         )
         transparencyTween:Play()
     end
@@ -175,7 +185,13 @@ local function CreateFullUI()
         if not isBeingTouched then return end
         isBeingTouched = false
         
-        local tweenInfo = TweenInfo.new(0.3, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
+        -- 恢复原始颜色
+        local tweenInfo = TweenInfo.new(
+            0.3,
+            Enum.EasingStyle.Quad,
+            Enum.EasingDirection.Out
+        )
+        
         local restoreTween = tweenService:Create(
             mainFrame,
             tweenInfo,
@@ -184,6 +200,7 @@ local function CreateFullUI()
         restoreTween:Play()
     end
     
+    -- 更精确的触摸事件处理
     userInputService.TouchStarted:Connect(function(input, processed)
         if processed then return end
         
@@ -191,6 +208,7 @@ local function CreateFullUI()
         local mainFramePos = mainFrame.AbsolutePosition
         local mainFrameSize = mainFrame.AbsoluteSize
         
+        -- 精确检查触摸点是否在UI范围内
         if touchPos.X >= mainFramePos.X and touchPos.X <= mainFramePos.X + mainFrameSize.X and
            touchPos.Y >= mainFramePos.Y and touchPos.Y <= mainFramePos.Y + mainFrameSize.Y then
             StartTouchFeedback()
@@ -200,7 +218,7 @@ local function CreateFullUI()
     userInputService.TouchEnded:Connect(function(input, processed)
         EndTouchFeedback()
     end)
-    -- ==================== 触摸效果系统完成 ====================
+    -- ==================== UI变白问题修复完成 ====================
 
     -- 音频控制系统
     local soundSystem = {
@@ -410,4 +428,4 @@ local function CreateFullUI()
 end
 
 CreateFullUI()
-print("音乐播放器UI已加载 - 拖动圆环已隐藏，触摸半透明效果已启用")
+print("音乐播放器UI已加载 - 拖动圆环和UI变白问题已彻底修复")
