--- a/音乐2.1
+++ b/音乐2.1
@@ -1,6 +1,7 @@
 local player = game:GetService("Players").LocalPlayer
 local userInputService = game:GetService("UserInputService")
 local replicatedStorage = game:GetService("ReplicatedStorage")
+local tweenService = game:GetService("TweenService")
 
 if not player:FindFirstChild("PlayerGui") then player:WaitForChild("PlayerGui") end
 
@@ -29,12 +30,26 @@ local function CreateFullUI()
     
     -- ==================== 关键修复：使用参考脚本的拖动设置 ====================
     mainFrame.Active = true
-    Instance.new("UIDragDetector", mainFrame) -- 直接使用参考脚本的方法
     
-    -- 添加这个设置来确保拖动时不显示圆环
-    local emptySelectionImage = Instance.new("ImageLabel")
-    emptySelectionImage.Image = ""
-    mainFrame.SelectionImageObject = emptySelectionImage
+    -- 创建完全透明的拖动反馈图像（参考脚本的核心方法）
+    local transparentDragImage = Instance.new("ImageLabel")
+    transparentDragImage.Image = "" -- 空图像
+    transparentDragImage.Size = UDim2.new(0, 1, 0, 1) -- 最小尺寸
+    transparentDragImage.BackgroundTransparency = 1 -- 完全透明
+    transparentDragImage.Visible = false -- 不可见
+    transparentDragImage.Parent = mainFrame
+    
+    -- 设置选择图像对象为透明图像（隐藏默认圆环的关键）
+    mainFrame.SelectionImageObject = transparentDragImage
+    
+    -- 使用UIDragDetector（保持拖动功能）
+    local dragDetector = Instance.new("UIDragDetector")
+    dragDetector.Parent = mainFrame
+    
+    -- 在拖动开始时设置透明反馈（参考脚本的额外保险）
+    dragDetector.DragStarted:Connect(function()
+        dragDetector:SetDragImage(transparentDragImage, -9999, -9999)
+    end)
     -- ===================================================================
     
     ApplyRoundedCorners(mainFrame, 12)
@@ -351,4 +366,4 @@ local function CreateFullUI()
 end
 
 CreateFullUI()
-print("音乐播放器UI已加载 - 拖动圆环问题已修复")
+print("音乐播放器UI已加载 - 拖动圆环问题已彻底修复")
