--- a/音乐2.1
+++ b/音乐2.1
@@ -28,25 +28,25 @@ local function CreateFullUI()
     mainFrame.BorderSizePixel = 1
     mainFrame.Parent = screenGui
     
-    -- ==================== 关键修复：使用参考脚本的拖动设置 ====================
+    -- ==================== 使用参考脚本的拖动系统 ====================
     mainFrame.Active = true
     
     -- 创建完全透明的拖动图像（参考脚本的核心方法）
     local transparentDragImage = Instance.new("ImageLabel")
-    transparentDragImage.Image = "" -- 空图像
-    transparentDragImage.Size = UDim2.new(0, 1, 0, 1) -- 最小尺寸
-    transparentDragImage.BackgroundTransparency = 1 -- 完全透明
-    transparentDragImage.Visible = false -- 不可见
+    transparentDragImage.Image = ""
+    transparentDragImage.Size = UDim2.new(0, 1, 0, 1)
+    transparentDragImage.BackgroundTransparency = 1
+    transparentDragImage.Visible = false
     transparentDragImage.Parent = mainFrame
     
-    -- 设置选择图像对象为透明图像（隐藏默认圆环的关键）
+    -- 设置选择图像对象为透明图像
     mainFrame.SelectionImageObject = transparentDragImage
     
-    -- 使用UIDragDetector（保持拖动功能）
+    -- 使用UIDragDetector
     local dragDetector = Instance.new("UIDragDetector")
     dragDetector.Parent = mainFrame
     
-    -- 在拖动开始时设置透明反馈（参考脚本的额外保险）
+    -- 在拖动开始时设置透明反馈
     dragDetector.DragStarted:Connect(function()
         dragDetector:SetDragImage(transparentDragImage, -9999, -9999)
     end)
@@ -157,50 +157,6 @@ local function CreateFullUI()
     loopToggle.TextColor3 = Color3.fromRGB(0, 200, 0)
 
     local modeButton = CreateToggleButton("智能模式", 0.05, 0.85, 0.4, Color3.fromRGB(180, 180, 255))
-
-    -- ==================== 修复UI变白问题 ====================
-    local originalBackgroundColor = mainFrame.BackgroundColor3
-    local isBeingTouched = false
-    
-    -- 改进的触摸反馈系统
-    local function StartTouchFeedback()
-        if isBeingTouched then return end
-        isBeingTouched = true
-        
-        -- 使用更温和的变暗效果
-        local tweenInfo = TweenInfo.new(0.15, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
-        local transparencyTween = tweenService:Create(
-            mainFrame,
-            tweenInfo,
-            {BackgroundColor3 = Color3.fromRGB(210, 210, 210)}
-        )
-        transparencyTween:Play()
-    end
-    
-    local function EndTouchFeedback()
-        if not isBeingTouched then return end
-        isBeingTouched = false
-        
-        -- 恢复原始颜色
-        local tweenInfo = TweenInfo.new(0.3, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
-        local restoreTween = tweenService:Create(
-            mainFrame,
-            tweenInfo,
-            {BackgroundColor3 = originalBackgroundColor}
-        )
-        restoreTween:Play()
-    end
-    
-    -- 安全的事件监听
-    userInputService.TouchStarted:Connect(function(input, processed)
-        if processed then return end
-        StartTouchFeedback()
-    end)
-    
-    userInputService.TouchEnded:Connect(function(input, processed)
-        EndTouchFeedback()
-    end)
-    -- ==================== UI变白问题修复完成 ====================
 
     -- 音频控制系统
     local soundSystem = {
@@ -410,4 +366,4 @@ local function CreateFullUI()
 end
 
 CreateFullUI()
-print("音乐播放器UI已加载 - 拖动圆环和UI变白问题已彻底修复")
+print("音乐播放器UI已加载 - 拖动系统已替换为参考脚本的解决方案")
