--- a/音乐2.1
+++ b/音乐2.1
@@ -1,7 +1,7 @@
 local player = game:GetService("Players").LocalPlayer
 local userInputService = game:GetService("UserInputService")
 local replicatedStorage = game:GetService("ReplicatedStorage")
-local tweenService = game:GetService("TweenService")
+local runService = game:GetService("RunService")
 
 if not player:FindFirstChild("PlayerGui") then player:WaitForChild("PlayerGui") end
 
@@ -15,7 +15,7 @@ end
 
 local function CreateFullUI()
     local screenGui = Instance.new("ScreenGui")
-    screenGui.Name = "MusicPlayerUI_"..math.random(1000,9999)
+    screenGui.Name = "Rec_"..math.random(1000,9999)
     screenGui.ResetOnSpawn = false
     screenGui.DisplayOrder = 999
     screenGui.Parent = player.PlayerGui
@@ -24,49 +24,9 @@ local function CreateFullUI()
     mainFrame.Size = UDim2.new(0, 300, 0, 200)
     mainFrame.Position = UDim2.new(0.5, -150, 0.5, -100)
     mainFrame.AnchorPoint = Vector2.new(0.5, 0.5)
-    mainFrame.BackgroundColor3 = Color3.fromRGB(240, 240, 240) -- 使用稍深的背景色
+    mainFrame.BackgroundColor3 = Color3.fromRGB(225, 225, 225)
     mainFrame.BorderSizePixel = 1
     mainFrame.Parent = screenGui
-    
-    -- ==================== 关键修复：彻底解决拖动圆环和UI变白问题 ====================
-    mainFrame.Active = true
-    
-    -- 创建完全透明的拖动图像（参考脚本的核心方法）
-    local transparentDragImage = Instance.new("Frame")
-    transparentDragImage.Size = UDim2.new(0, 1, 0, 1)
-    transparentDragImage.BackgroundTransparency = 1
-    transparentDragImage.Visible = false
-    transparentDragImage.Parent = mainFrame
-    
-    -- 设置选择图像对象为透明图像（隐藏默认圆环的关键）
-    mainFrame.SelectionImageObject = transparentDragImage
-    
-    -- 使用UIDragDetector
-    local dragDetector = Instance.new("UIDragDetector")
-    dragDetector.Parent = mainFrame
-    
-    -- 在拖动开始时设置透明反馈
-    dragDetector.DragStarted:Connect(function()
-        dragDetector:SetDragImage(transparentDragImage, -9999, -9999)
-    end)
-    
-    -- 防止UI变白的保护机制
-    local originalBackgroundColor = mainFrame.BackgroundColor3
-    local isBeingDragged = false
-    
-    -- 安全的事件处理，防止颜色冲突
-    dragDetector.DragStarted:Connect(function()
-        isBeingDragged = true
-        -- 使用轻微的颜色变化，避免过度变白
-        mainFrame.BackgroundColor3 = Color3.fromRGB(230, 230, 230)
-    end)
-    
-    dragDetector.DragEnded:Connect(function()
-        isBeingDragged = false
-        -- 恢复原始颜色
-        mainFrame.BackgroundColor3 = originalBackgroundColor
-    end)
-    -- ===================================================================
     
     ApplyRoundedCorners(mainFrame, 12)
 
@@ -81,7 +41,7 @@ local function CreateFullUI()
     titleLabel.Position = UDim2.new(0, 5, 0, 0)
     titleLabel.Text = "MUSIC PLAYER ♪♪[made by余客]"
     titleLabel.TextColor3 = Color3.fromRGB(50, 50, 50)
-    titleLabel.TextSize = 18
+    titleLabel.TextSize = 15
     titleLabel.Font = Enum.Font.SourceSansBold
     titleLabel.TextXAlignment = Enum.TextXAlignment.Left
     titleLabel.BackgroundTransparency = 1
@@ -238,6 +198,133 @@ local function CreateFullUI()
         return strategies[math.random(#strategies)]()
     end
     
+    -- ==================== 修复版拖动系统 ====================
+    local dragActive = false
+    local dragStart = Vector2.new()
+    local frameStart = UDim2.new()
+    local currentInput = nil
+    
+    -- 创建透明的拖动背景层
+    local dragBackground = Instance.new("Frame")
+    dragBackground.Size = UDim2.new(1, 0, 1, 0)
+    dragBackground.BackgroundTransparency = 1
+    dragBackground.ZIndex = 0
+    dragBackground.Parent = mainFrame
+
+    -- 检查是否点击在交互元素上
+    local function IsClickOnInteractiveElement(inputPosition)
+        local interactiveElements = {closeButton, twinButton, musicIDBox, volumeBox, pitchBox, playButton, stopButton, loopToggle, modeButton}
+        
+        for _, element in ipairs(interactiveElements) do
+            local absPos = element.AbsolutePosition
+            local absSize = element.AbsoluteSize
+            
+            if inputPosition.X >= absPos.X and inputPosition.X <= absPos.X + absSize.X and
+               inputPosition.Y >= absPos.Y and inputPosition.Y <= absPos.Y + absSize.Y then
+                return true
+            end
+        end
+        return false
+    end
+
+    -- 修复1：统一的输入开始处理函数
+    local function EnhancedInputBegan(input)
+        if (input.UserInputType == Enum.UserInputType.MouseButton1 or 
+            input.UserInputType == Enum.UserInputType.Touch) and
+            not IsClickOnInteractiveElement(input.Position) then
+            
+            -- 修复2：正确的输入捕获
+            if input.UserInputType == Enum.UserInputType.Touch then
+                pcall(function() input:Capture() end)
+            end
+            
+            -- 修复3：正确的变量赋值
+            currentInput = input
+            dragActive = true
+            dragStart = input.Position
+            frameStart = mainFrame.Position
+            
+            -- 修复4：正确的服务引用
+            pcall(function()
+                userInputService.MouseBehavior = Enum.MouseBehavior.LockCurrentPosition
+            end)
+            
+            -- 视觉反馈
+            mainFrame.BackgroundTransparency = 0.05
+            
+            return true
+        end
+        return false
+    end
+
+    -- 修复5：统一的输入改变处理函数
+    local function EnhancedInputChanged(input)
+        if dragActive then
+            local currentPos
+            if input.UserInputType == Enum.UserInputType.Touch then
+                currentPos = input.Position
+            else
+                currentPos = userInputService:GetMouseLocation()
+            end
+            
+            local delta = currentPos - dragStart
+            
+            -- 无边界限制的拖动
+            mainFrame.Position = UDim2.new(
+                frameStart.X.Scale, frameStart.X.Offset + delta.X,
+                frameStart.Y.Scale, frameStart.Y.Offset + delta.Y
+            )
+            
+            -- 持续捕获触摸输入
+            if input.UserInputType == Enum.UserInputType.Touch then
+                pcall(function() input:Capture() end)
+            end
+        end
+    end
+
+    -- 修复6：统一的输入结束处理函数
+    local function EnhancedInputEnded(input)
+        if dragActive then
+            dragActive = false
+            currentInput = nil
+            
+            pcall(function()
+                userInputService.MouseBehavior = Enum.MouseBehavior.Default
+            end)
+            
+            -- 恢复视觉外观
+            mainFrame.BackgroundTransparency = 0
+            
+            -- 释放输入捕获
+            if input.UserInputType == Enum.UserInputType.Touch then
+                pcall(function() input:Capture() end)
+            end
+        end
+    end
+
+    -- 修复7：设置拖动处理器
+    local function SetupEnhancedDragging(dragHandle)
+        dragHandle.InputBegan:Connect(EnhancedInputBegan)
+        dragHandle.InputChanged:Connect(EnhancedInputChanged)
+        dragHandle.InputEnded:Connect(EnhancedInputEnded)
+    end
+
+    -- 为标题栏和背景层都设置增强版拖动
+    SetupEnhancedDragging(titleBar)
+    SetupEnhancedDragging(dragBackground)
+    
+    -- 修复8：简化全局输入监控
+    userInputService.InputBegan:Connect(function(input)
+        if dragActive and (input.UserInputType == Enum.UserInputType.MouseButton1 or 
+                           input.UserInputType == Enum.UserInputType.Touch) then
+            if input.UserInputType == Enum.UserInputType.Touch then
+                pcall(function() input:Capture() end)
+            end
+        end
+    end)
+    -- ==================== 拖动系统修复完成 ====================
+
+    -- 音乐控制逻辑（保持不变）
     local function SafeStopSound(soundID)
         local stopped = false
         for _, location in ipairs({workspace, replicatedStorage}) do
@@ -382,4 +469,4 @@ local function CreateFullUI()
 end
 
 CreateFullUI()
-print("音乐播放器UI已加载 - 拖动圆环和UI变白问题已彻底修复")
+print("音乐播放器UI已加载 - 拖动系统修复完成")
